configuring docker image

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,8 +19,7 @@ params {
 
 
 // Docker settings
-// NOTE: You must run `docker build --tag wisc-prolonged-infection:v1_0_1 config/` before the necessary container is available
-process.container = 'ncbi/sra-tools:3.0.0'
+process.container = 'nrminor/sc2_read_downloader:v1.0.1'
 docker.enabled = true
 
 
